@@ -13,6 +13,7 @@
   *   - Added support for the new B series XMEGA devices
   *   - Added support for version 2 of the Teensy boards (thanks to Christoph Redecker)
   *   - Added new Android Accessory Host class driver
+  *   - Added new USB_Host_GetDeviceConfiguration() and USB_Host_GetInterfaceAltSetting() functions
   *  - Library Applications:
   *   - Added User Application APIs to the CDC and DFU class bootloaders
   *   - Added INVERTED_ISP_MISO compile time option to the AVRISP-MKII clone project (thanks to Chuck Rohs)
